Swagger docs for new apis
